# medical-rag-system

./: .gitignore  app.py  evaluate_ragas.py  evaluation_results.csv  evaluation_summary.csv  pyproject.toml  rag.py
notebooks/: cleaning_dataset.ipynb
