[project]
name = "ragproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "gradio>=6.20.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
